--- a/di-gi/index.html
+++ b/di-gi/index.html
@@ -8,21 +8,31 @@
   <title>DiGi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="main">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
   <div class="header">
     <img src="images/header/logo.png" alt="Digital Agency logo" class="header__logo">
-    <div class="menu_button">
-      <i class="fa-solid fa-bars"></i>
-    </div>
+    <button class="menu_button"><i class="fa-solid fa-bars"></i></button>
   </div>
-  <div class="itro"></div>
+  <div class="intro">
+    <h1 class="title">мисли глобально</h1>
+    <p class="intro_text">Di Gі — це діджитал агенція повного циклу, спрямована на найкращий результат наших клієнтів в
+      маркетингу, продажах та упFравленні</p>
+    <button class="read_more_btn">детальніше</button>
+    <div class="pagination"></div>
+  </div>
+  </div>
   <div class="promo"></div>
   <div class="services"></div>
   <div class="recent_work"></div>
