--- a/di-gi/index.html
+++ b/di-gi/index.html
@@ -8,10 +8,12 @@
   <title>DiGi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/normalize.css">
@@ -21,25 +23,44 @@
 <body class="main">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
-  <div class="header">
+  <section class="header">
     <img src="images/header/logo.png" alt="Digital Agency logo" class="header__logo">
     <button class="menu_button"><i class="fa-solid fa-bars"></i></button>
-  </div>
-  <div class="intro">
+  </section>
+  <section class="intro">
     <h1 class="title">мисли глобально</h1>
-    <p class="intro_text">Di Gі — це діджитал агенція повного циклу, спрямована на найкращий результат наших клієнтів в
-      маркетингу, продажах та упFравленні</p>
+    <p class="intro_text">Di Gi— це діджитал агенція повного циклу, спрямована на найкращий результат наших клієнтів в
+      маркетингу, продажах та управлінні</p>
     <button class="read_more_btn">детальніше</button>
-    <div class="pagination"></div>
-  </div>
-  </div>
-  <div class="promo"></div>
-  <div class="services"></div>
-  <div class="recent_work"></div>
-  <div class="video_block"></div>
-  <div class="latest_news"></div>
-  <div class="testimonial"></div>
-  <div class="footer"></div>
+    <div class="carousel">
+      <div class="arrows">
+        <button class="left_arrow_btn"><span class="material-symbols-sharp">
+            chevron_left
+          </span></button>
+        <button class="right_arrow_btn"><span class="material-symbols-sharp">
+            chevron_right
+          </span></button>
+      </div>
+      <div class="pagination">
+        <button class="indicator"></button>
+        <button class="indicator active"></button>
+        <button class="indicator"></button>
+      </div>
+    </div>
+  </section>
+  <section class="promo">
+    <div class="cta_text_wrapper">
+      <h1 class="cta_text">Ви полюбите нас з першої зустрічі!</h1>
+      <p class="cta_text">Ми надаємо комплексний підхід до просування компанії,
+        продуктів та послуг в цифровій сфері.</p>
+    </div>
+    <button class="buy_btn">передзвоніть мені</button>
+  </section>
+  <section class="services"></section>
+  <section class="recent_work"></section>
+  <section class="video_block"></section>
+  <section class="testimonial"></section>
+  <section class="footer"></section>
 
 </body>
 
