--- a/di-gi/index.html
+++ b/di-gi/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DiGi</title>
+  <title>DiGi — Digital Agency</title>
+  <link rel="icon" type="image/png" href="images/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet"
@@ -62,19 +67,44 @@
     <button class="buy_btn">передзвоніть мені</button>
   </section>
   <section class="services">
-    <div class="services_intro">
+    <div class="services_text_description">
       <div>
-      <h1 class="services_head">Сервіс</h1>
+        <h1 class="services_text_head">Сервіс</h1>
       </div>
       <div>
-      <h2 class="services_main">Від ідеї до незабутнього та вимірюваного результату.</h2>
+        <h2 class="services_text_main">Від ідеї до незабутнього та вимірюваного результату.</h2>
       </div>
       <div>
-      <p class="services_content">Інтеграція бездоганного виробництва, передових технологій та ретельного вимірювання продуктивності</p>
+        <p class="services_text_content">Інтеграція бездоганного виробництва, передових технологій та ретельного
+          вимірювання продуктивності</p>
       </div>
     </div>
     <div class="services_items">
-        <img src="images/services/item1.svg" alt="" class="header__logo">
+      <button class="serv_item_btn">
+        <div class="service_image" style="--image-url: url('images/services/item1.png')"></div>
+        <img src="images/services/item1.png" alt="стратегія" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item2.png" alt="аналіз" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item3.png" alt="соц мережі" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item4.png" alt="розвиток" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item5.png" alt="контент" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item6.png" alt="дизайн UX" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item7.png" alt="таргетована реклама" class="service_image">
+      </button>
+      <button class="serv_item_btn">
+        <img src="images/services/item8.png" alt="продукт" class="service_image">
+      </button>
     </div>
   </section>
   <section class="recent_work"></section>
