--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="css/recent-work.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/intro.css">
+  <link rel="stylesheet" href="css/video-block.css">
+  <link rel="stylesheet" href="css/latest-news.css">
 </head>
 
 <body class="main">
@@ -205,7 +207,58 @@
       </div>
     </div>
   </section>
-  <section class="video_block"></section>
+  <section class="video_block">
+    <div class="video">
+      <img src="images/video-preview.png" alt="video-preview" class="video">
+    </div>
+    <div class="video_content">
+      <h1 class="video_title">Команда</h1>
+      <p class="video_description">Наша команда — це наша найбільша цінність.<br>
+        Ми наполегливо працювали, щоб створити групу експертів,
+        чиї навички доповнюють один одного.<br>У членів нашої команди різні історії,
+        але ми розділяємо загальну пристрасть до ідеалу.<br>Ми віримо, щоб залишатись
+        професіоналом, потрібно розвиватись, тому ми постійно шукаємо способи,
+        як стати краще в тому, що ми робимо.</p>
+      <button class="play_video_btn">дивитись відео</button>
+    </div>
+  </section>
+  <section class="latest_news">
+    <h1 class="news_title">Останні Новини</h1>
+    <div class="news_content">
+      <div class="news_block">
+        <img src="images/latest-news-content/news-1.jpg" alt="news-1.jpg" class="news_image">
+        <h1 class="news_name">3Д в брендингу</h1>
+      </div>
+      <div class="news_block">
+        <img src="images/latest-news-content/news-2.jpg" alt="news-2.jpg" class="news_image">
+        <h1 class="news_name">Контекстна реклама</h1>
+      </div>
+       <div class="news_block">
+        <img src="images/latest-news-content/news-3.jpg" alt="news-3.jpg" class="news_image">
+        <h1 class="news_name">Графіка</h1>
+      </div>
+       <div class="news_block">
+        <img src="images/latest-news-content/news-4.jpg" alt="news-4.jpg" class="news_image">
+        <h1 class="news_name">Корпоративна культура</h1>
+      </div>
+       <div class="news_block">
+        <img src="images/latest-news-content/news-5.jpg" alt="news-5.jpg" class="news_image">
+        <h1 class="news_name">Унікальний дизайн</h1>
+      </div>
+       <div class="news_block">
+        <img src="images/latest-news-content/news-6.jpg" alt="news-6.jpg" class="news_image">
+        <h1 class="news_name">Погляд зі сторони</h1>
+      </div>
+       <div class="news_block">
+        <img src="images/latest-news-content/news-7.jpg" alt="news-7.jpg" class="news_image">
+        <h1 class="news_name">Соц мережі та їх користь</h1>
+      </div>
+       <div class="news_block">
+        <img src="images/latest-news-content/news-8.jpg" alt="news-8.jpg" class="news_image">
+        <h1 class="news_name">Ексклюзивність</h1>
+      </div>
+    </div>
+  </section>
   <section class="testimonial"></section>
   <section class="footer"></section>
 
