--- a/index.html
+++ b/index.html
@@ -235,83 +235,68 @@
     <div class="news_content">
       <figure class="news_block">
         <img src="images/latest-news-content/news-1.jpg" alt="news-1.jpg" class="news_image">
+        <div class="news_info_shading"></div>
         <figcaption class="news_name">3Д в брендингу</figcaption>
-        <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
-      </figure>
-      <figure class="news_block">
-        <img src="images/latest-news-content/news-2.jpg" alt="news-2.jpg" class="news_image">
-        <figcaption class="news_name">Контекстна реклама</figcaption>
-        <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
-      </figure>
-      <figure class="news_block">
-        <img src="images/latest-news-content/news-3.jpg" alt="news-3.jpg" class="news_image">
-        <figcaption class="news_name">Графіка</figcaption>
-        <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
-      </figure>
-      <figure class="news_block">
-        <img src="images/latest-news-content/news-4.jpg" alt="news-4.jpg" class="news_image">
-        <figcaption class="news_name">Корпоративна культура</figcaption>
-        <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
       </figure>
       <figure class="news_block">
         <img src="images/latest-news-content/news-5.jpg" alt="news-5.jpg" class="news_image">
-        <figcaption class="news_name">Унікальний дизайн</figcaption>
         <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
+        <figcaption class="news_name">Унікальний дизайн</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
+      </figure>
+      <figure class="news_block">
+        <img src="images/latest-news-content/news-2.jpg" alt="news-2.jpg" class="news_image">
+        <div class="news_info_shading"></div>
+        <figcaption class="news_name">Контекстна реклама</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
       </figure>
       <figure class="news_block">
         <img src="images/latest-news-content/news-6.jpg" alt="news-6.jpg" class="news_image">
-        <figcaption class="news_name">Погляд зі сторони</figcaption>
         <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
+        <figcaption class="news_name">Погляд зі сторони</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
+      </figure>
+      <figure class="news_block">
+        <img src="images/latest-news-content/news-3.jpg" alt="news-3.jpg" class="news_image">
+        <div class="news_info_shading"></div>
+        <figcaption class="news_name">Графіка</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
       </figure>
       <figure class="news_block">
         <img src="images/latest-news-content/news-7.jpg" alt="news-7.jpg" class="news_image">
-        <figcaption class="news_name">Соц мережі та їх користь</figcaption>
         <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
+        <figcaption class="news_name">Соц мережі та їх користь</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
       </figure>
       <figure class="news_block">
-        <img src="images/latest-news-content/news-8.jpg" alt="news-8.jpg" class="news_image">
-        <figcaption class="news_name">Ексклюзивність</figcaption>
+        <img src="images/latest-news-content/news-4.jpg" alt="news-4.jpg" class="news_image">
         <div class="news_info_shading"></div>
-        <button class="info_btn_wrapper">
-          <svg class="news_info_btn">
-            <use href="#icon-info"></use>
-          </svg>
-        </button>
+        <figcaption class="news_name">Корпоративна культура</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
+      </figure>
+
+      <figure class="news_block">
+        <img src="images/latest-news-content/news-8.jpg" alt="news-8.jpg" class="news_image">
+        <div class="news_info_shading"></div>
+        <figcaption class="news_name">Ексклюзивність</figcaption>
+        <svg class="news_info_btn">
+          <use href="#icon-info"></use>
+        </svg>
       </figure>
     </div>
   </section>
@@ -328,7 +313,11 @@
       </div>
     </figure>
   </section>
-  <section class="footer"></section>
+  <section class="footer">
+     <button class="watch_btn">
+        <img src="images/logo.png" alt="Digital Agency logo" class="header__logo">
+     </button>
+  </section>
 
 </body>
 
