--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,9 +20,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/recent-work.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/intro.css">
@@ -150,7 +149,7 @@
           <span class="more_link">детальніше &rarr;</span>
         </div>
       </button>
-      <button class="serv_item_btn" onclick="location.href='#header'">
+      <button class="serv_item_btn" onclick="location.href='#'">
         <img src="images/services/item8.png" alt="продукт" class="service_image">
         <h3 class="item_name">продукт</h3>
         <div class="item_hover_content">
@@ -169,7 +168,7 @@
         <div class="portfolio_image_btn">
           <img src="images/content/portfolio-1.png" alt="portfolio-1.png" class="portfolio_image">
           <div class="hover_info">
-            <a href="#header">
+            <a href="#">
               <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
               <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
             </a>
@@ -181,7 +180,7 @@
         <div class="portfolio_image_btn">
           <img src="images/content/portfolio-2.png" alt="portfolio-2.png" class="portfolio_image">
           <div class="hover_info">
-            <a href="#header">
+            <a href="#">
               <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
               <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
             </a>
@@ -193,7 +192,7 @@
         <div class="portfolio_image_btn">
           <img src="images/content/portfolio-3.png" alt="portfolio-3.png" class="portfolio_image">
           <div class="hover_info">
-            <a href="#header">
+            <a href="#">
               <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
               <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
             </a>
@@ -205,7 +204,7 @@
         <div class="portfolio_image_btn">
           <img src="images/content/portfolio-4.png" alt="portfolio-4.png" class="portfolio_image">
           <div class="hover_info">
-            <a href="#header">
+            <a href="#">
               <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
               <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
             </a>
@@ -314,9 +313,21 @@
     </figure>
   </section>
   <section class="footer">
-     <button class="watch_btn">
-        <img src="images/logo.png" alt="Digital Agency logo" class="header__logo">
-     </button>
+    <button class="watch_btn">
+      <img src="images/logo.png" alt="Digital Agency logo" class="header__logo">
+    </button>
+    <h1 class="footer_cta">Ми хотіли б почути все про ваш проєкт.<br>Звʼяжіться з нами!</h1>
+    <div class="social">
+      <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
+      <div class="google_plus"><i class="fa-brands fa-google-plus-g"></i></div>
+      <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
+      <div class="pinterest"><i class="fa-brands fa-pinterest-p"></i></div>
+    </div>
+    <div class="widgets"></div>
+    <div class="up">
+      <a href="#" class="up_btn">нагору<span class="material-symbols-sharp">
+            keyboard_arrow_up</span></a>
+    </div>
   </section>
 
 </body>
