--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/promo.css">
+  <link rel="stylesheet" href="css/services.css">
   <link rel="stylesheet" href="css/recent-work.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/intro.css">
