--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </div>
       </figure>
     </section>
-    <section id="footer" class="footer">
+    <footer id="footer" class="footer">
       <button class="watch_btn">
         <img src="images/logo.png" alt="Digital Agency logo" class="header__logo">
       </button>
@@ -374,7 +374,7 @@
         <a href="#" class="up_btn">нагору<span class="material-symbols-sharp">
             keyboard_arrow_up</span></a>
       </div>
-    </section>
+    </footer>
   </div>
 </body>
 
