digi_header_menu

--- a/index.html
+++ b/index.html
@@ -39,25 +39,29 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <svg style="display: none;">
-      <symbol id="icon-info" viewBox="0 0 28 28">
+      <symbol id="icon_info" viewBox="0 0 28 28">
         <path fill-rule="evenodd" clip-rule="evenodd"
           d="M27.9811 13.7907C27.9811 21.4071 21.7173 27.5814 13.9906 27.5814C6.26378 27.5814 0 21.4071 0 13.7907C0 6.1743 6.26378 0 13.9906 0C21.7173 0 27.9811 6.1743 27.9811 13.7907ZM26.8619 13.7907C26.8619 20.7978 21.0992 26.4781 13.9906 26.4781C6.88193 26.4781 1.11924 20.7978 1.11924 13.7907C1.11924 6.78361 6.88193 1.10326 13.9906 1.10326C21.0992 1.10326 26.8619 6.78361 26.8619 13.7907ZM11.7521 11.0326V11.5842H12.8713V20.4102H11.7521V20.9618H12.8713H15.1098H16.229V20.4102H15.1098V11.0326H12.8713H11.7521ZM15.6694 8.27441C15.6694 9.18838 14.9178 9.9293 13.9906 9.9293C13.0633 9.9293 12.3117 9.18838 12.3117 8.27441C12.3117 7.36045 13.0633 6.61953 13.9906 6.61953C14.9178 6.61953 15.6694 7.36045 15.6694 8.27441Z" />
+      </symbol>
+      <symbol id="icon_search" viewBox="0 0 28 28">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M18.551 3.1186C22.393 6.96058 22.6799 13.0271 19.4406 17.2956L27.7881 25.6431L25.8096 27.6217L17.4831 19.2952C13.2063 22.6879 7.01693 22.4501 3.11826 18.5514C-1.08251 14.3506 -1.03316 7.49048 3.22849 3.22883C7.49014 -1.03281 14.3503 -1.08217 18.551 3.1186ZM17.7596 3.91003C21.5295 7.67995 21.4853 13.8365 17.6607 17.661C13.8361 21.4856 7.6796 21.5299 3.90968 17.76C0.139761 13.99 0.184052 7.83351 4.00861 4.00895C7.83317 0.184398 13.9897 0.140107 17.7596 3.91003Z" />
       </symbol>
     </svg>
     <header id="header" class="header">
       <img src="images/logo.png" alt="Digital Agency logo" class="header__logo">
-      <nav class="nav-menu">
-        <button class="menu_button"><i class="fa-solid fa-bars"></i></button>
-        <!--
-        <ul>
-          <li><a href="#">Cервіс</a></li>
-          <li><a href="#">Наші проєкти</a></li>
-          <li><a href="#">Команда</a></li>
-          <li><a href="#">Останні новини</a></li>
-          <li><a href="#">Цитати</a></li>
-          <li><a href="#">Контакти</a></li>
-        </ul> 
-      -->
+      <nav>
+        <input type="checkbox" id="menu_toggle">
+        <label for="menu_toggle" class="menu_button"><i class="fa-solid fa-bars"></i></label>
+        <ul class="header__nav_menu">
+          <li><a href="#services">Cервіс</a></li>
+          <li><a href="#recent_work">Наші проєкти</a></li>
+          <li><a href="#video_block">Команда</a></li>
+          <li><a href="#latest_news">Останні новини</a></li>
+          <li><a href="#testimonial">Цитати</a></li>
+          <li><a href="#footer">Контакти</a></li>
+        </ul>
+
       </nav>
     </header>
     <section class="intro">
@@ -93,7 +97,7 @@
       </div>
       <button class="buy_btn">передзвоніть мені</button>
     </section>
-    <section class="services">
+    <section id="services" class="services">
       <div class="services_text_description">
         <div>
           <h1 class="services_text_head">Сервіс</h1>
@@ -183,8 +187,12 @@
             <img src="images/content/portfolio-1.png" alt="portfolio-1.png" class="portfolio_image">
             <div class="hover_info">
               <a href="#">
-                <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
-                <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
+               <svg class="svg__info_btn">
+                  <use href="#icon_info"></use>
+                </svg>
+                <svg class="svg__search_btn">
+                  <use href="#icon_search"></use>
+                </svg>
               </a>
             </div>
           </div>
@@ -195,8 +203,12 @@
             <img src="images/content/portfolio-2.png" alt="portfolio-2.png" class="portfolio_image">
             <div class="hover_info">
               <a href="#">
-                <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
-                <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
+               <svg class="svg__info_btn">
+                  <use href="#icon_info"></use>
+                </svg>
+                <svg class="svg__search_btn">
+                  <use href="#icon_search"></use>
+                </svg>
               </a>
             </div>
           </div>
@@ -207,8 +219,12 @@
             <img src="images/content/portfolio-3.png" alt="portfolio-3.png" class="portfolio_image">
             <div class="hover_info">
               <a href="#">
-                <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
-                <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
+                <svg class="svg__info_btn">
+                  <use href="#icon_info"></use>
+                </svg>
+                <svg class="svg__search_btn">
+                  <use href="#icon_search"></use>
+                </svg>
               </a>
             </div>
           </div>
@@ -219,8 +235,12 @@
             <img src="images/content/portfolio-4.png" alt="portfolio-4.png" class="portfolio_image">
             <div class="hover_info">
               <a href="#">
-                <img src="images/content/info_button.svg" alt="info_button.svg" class="info_btn">
-                <img src="images/content/search_button.svg" alt="search_button.svg" class="search_btn">
+                <svg class="svg__info_btn">
+                  <use href="#icon_info"></use>
+                </svg>
+                <svg class="svg__search_btn">
+                  <use href="#icon_search"></use>
+                </svg>
               </a>
             </div>
           </div>
@@ -251,7 +271,7 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">3Д в брендингу</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
         <figure class="news_block">
@@ -259,7 +279,7 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Унікальний дизайн</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
         <figure class="news_block">
@@ -267,7 +287,7 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Контекстна реклама</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
         <figure class="news_block">
@@ -275,7 +295,7 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Погляд зі сторони</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
         <figure class="news_block">
@@ -283,7 +303,7 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Графіка</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
         <figure class="news_block">
@@ -291,7 +311,7 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Соц мережі та їх користь</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
         <figure class="news_block">
@@ -299,21 +319,20 @@
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Корпоративна культура</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
-
         <figure class="news_block">
           <img src="images/latest-news-content/news-8.jpg" alt="news-8.jpg" class="news_image">
           <div class="news_info_shading"></div>
           <figcaption class="news_name">Ексклюзивність</figcaption>
           <svg class="news_info_btn">
-            <use href="#icon-info"></use>
+            <use href="#icon_info"></use>
           </svg>
         </figure>
       </div>
     </section>
-    <section class="testimonial">
+    <section id="testimonial" class="testimonial">
       <figure class="quotes_carousel">
         <div class="quote"><i class="fas fa-quote-right"></i></div>
         <blockquote class="quote_text">Якщо треба створити<br class="br_mobile"> або підняти імідж компанії,<br
@@ -331,7 +350,8 @@
       <button class="footer__logo_btn">
         <img src="images/logo.png" alt="Digital Agency logo" class="header__logo">
       </button>
-      <h3 class="footer__title">Ми хотіли б почути все<br class="footer_br320"> про ваш проєкт.<br>Звʼяжіться з нами!</h3>
+      <h3 class="footer__title">Ми хотіли б почути все<br class="footer_br320"> про ваш проєкт.<br>Звʼяжіться з нами!
+      </h3>
       <ul class="footer__socials">
         <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
         <li><a href="https://www.google.com/" target="_blank"><i class="fa-brands fa-google-plus-g"></i></a></li>
