--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   <link rel="stylesheet" href="css/footer.css">
   <meta property="og:type" content="website">
   <meta property="og:title" content="DiGi — професійний UX/UI дизайн для вашого бізнесу">
-  <meta property="og:description" content="Ми надаємо комплексний підхід до просування компанії,
-продуктів та послуг в цифровій сфері">
+  <meta property="og:description" content="Комплексний підхід до просування бізнесу в цифровій сфері">
   <meta property="og:url" content="https://drvirus15.github.io/di-gi/">
   <meta property="og:image" content="https://drvirus15.github.io/di-gi/images/og-promo.jpg">
   <meta property="og:site_name" content="DiGi — Digital Agency">
@@ -46,8 +45,7 @@
   <meta property="og:locale" content="uk_UA">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="DiGi — професійний UX/UI дизайн для вашого бізнесу">
-  <meta name="twitter:description"
-    content="Комплексний підхід до просування бізнесу в цифровій сфері">
+  <meta name="twitter:description" content="Комплексний підхід до просування бізнесу в цифровій сфері">
   <meta name="twitter:image" content="https://drvirus15.github.io/di-gi/images/og-promo.jpg">
 </head>
 
