--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="content">
           <figure class="portfolio_item">
             <div class="portfolio_image_btn">
-              <img src="images/content/portfolio-1.png" alt="portfolio-1.png" class="portfolio_image">
+              <img src="images/content/portfolio-1.jpg" alt="portfolio-1.png" class="portfolio_image">
               <div class="hover_info">
                 <a href="#">
                   <svg class="svg__info_btn">
@@ -203,7 +203,7 @@
           </figure>
           <figure class="portfolio_item">
             <div class="portfolio_image_btn">
-              <img src="images/content/portfolio-2.png" alt="portfolio-2.png" class="portfolio_image">
+              <img src="images/content/portfolio-2.jpg" alt="portfolio-2.png" class="portfolio_image">
               <div class="hover_info">
                 <a href="#">
                   <svg class="svg__info_btn">
@@ -219,7 +219,7 @@
           </figure>
           <figure class="portfolio_item">
             <div class="portfolio_image_btn">
-              <img src="images/content/portfolio-3.png" alt="portfolio-3.png" class="portfolio_image">
+              <img src="images/content/portfolio-3.jpg" alt="portfolio-3.png" class="portfolio_image">
               <div class="hover_info">
                 <a href="#">
                   <svg class="svg__info_btn">
@@ -235,7 +235,7 @@
           </figure>
           <figure class="portfolio_item">
             <div class="portfolio_image_btn">
-              <img src="images/content/portfolio-4.png" alt="portfolio-4.png" class="portfolio_image">
+              <img src="images/content/portfolio-4.jpg" alt="portfolio-4.png" class="portfolio_image">
               <div class="hover_info">
                 <a href="#">
                   <svg class="svg__info_btn">
@@ -253,7 +253,7 @@
       </section>
       <section id="video_block" class="video_block">
         <div class="video">
-          <img src="images/video-preview.png" alt="video-preview" class="video">
+          <img src="images/video-preview.jpg" alt="video-preview" class="video">
         </div>
         <div class="video_content">
           <h2 class="video_title">Команда</h2>
